--- a/volleyball.html
+++ b/volleyball.html
@@ -34,6 +34,7 @@
     var player;
     var ball;
     var cursors;
+    var gameover = false;
 
     var game = new Phaser.Game(config);
 
@@ -48,13 +49,43 @@
     {
         this.add.image(400, 300, 'sky');
 
-        player = this.physics.add.sprite(150, 550, 'ground');
+        player = this.physics.add.sprite(400, 550, 'ground');
+        player.setCollideWorldBounds(true);
+        player.body.immovable = true;
+
+        ball = this.physics.add.sprite(400, 50, 'bomb');
+
+        ball.setBounce(1);
+        ball.setGravityY(1000)
+        ball.setCollideWorldBounds(true);
+        ball.setVelocityX(Phaser.Math.Between(-300, 300));
+
+        this.physics.add.collider(player, ball);
 
         cursors = this.input.keyboard.createCursorKeys();
     }
 
     function update ()
     {
+        if (cursors.left.isDown)
+        {
+            player.setVelocityX(-160);
+        }
+        else if (cursors.right.isDown)
+        {
+            player.setVelocityX(160);
+        }
+        else
+        {
+            player.setVelocityX(0);
+        }
+    }
+
+    function dangerZone (ball)
+    {
+        this.physics.pause();
+
+        gameOver = true;
     }
 
 </script>
