--- a/volleyball.html
+++ b/volleyball.html
@@ -36,7 +36,7 @@
     var player;
     var ball;
     var cursors;
-    var gameover = false;
+    var gameOver = false;
 
     var game = new Phaser.Game(config);
 
@@ -44,8 +44,45 @@
     {
         this.load.image('sky', 'assets/sky.png');
         this.load.image('ground', 'assets/platform.png');
-        this.load.image('dude', 'assets/dude.png');
         this.load.image('bomb', 'assets/bomb.png');
+        this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
+    }
+
+    function createPlayer() {
+        player = this.physics.add.sprite(100, 450, 'dude');
+
+        player.setBounce(0.2);
+        player.setCollideWorldBounds(true);
+
+        //  Our player animations, turning, walking left and walking right.
+        this.anims.create({
+            key: 'left',
+            frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
+            frameRate: 10,
+            repeat: -1
+        });
+
+        this.anims.create({
+            key: 'turn',
+            frames: [ { key: 'dude', frame: 4 } ],
+            frameRate: 20
+        });
+
+        this.anims.create({
+            key: 'right',
+            frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
+            frameRate: 10,
+            repeat: -1
+        });
+    }
+
+    function createBall() {
+        ball = this.physics.add.sprite(400, 400, 'bomb');
+
+        ball.setBounce(0.9);
+        ball.setGravityY(1000);
+        ball.setCollideWorldBounds(true);
+        ball.setVelocityX(Phaser.Math.Between(-300, 300));
     }
 
     function create ()
@@ -54,16 +91,8 @@
 
         ground = this.physics.add.staticSprite(400, 568, 'ground').setScale(2).refreshBody();
 
-        player = this.physics.add.sprite(400, 400, 'dude');
-        player.setCollideWorldBounds(true);
-        // player.body.immovable = true;
-
-        ball = this.physics.add.sprite(400, 50, 'bomb');
-
-        ball.setBounce(1);
-        ball.setGravityY(1000);
-        ball.setCollideWorldBounds(true);
-        ball.setVelocityX(Phaser.Math.Between(-300, 300));
+        createPlayer.call(this);
+        createBall.call(this);
 
         this.physics.add.collider(player, ball);
         this.physics.add.collider(player, ground);
@@ -74,17 +103,33 @@
 
     function update ()
     {
+        if (gameOver)
+        {
+            return;
+        }
+
         if (cursors.left.isDown)
         {
             player.setVelocityX(-160);
+
+            player.anims.play('left', true);
         }
         else if (cursors.right.isDown)
         {
             player.setVelocityX(160);
+
+            player.anims.play('right', true);
         }
         else
         {
             player.setVelocityX(0);
+
+            player.anims.play('turn');
+        }
+
+        if (cursors.up.isDown && player.body.touching.down)
+        {
+            player.setVelocityY(-100);
         }
     }
 
