--- a/volleyball.html
+++ b/volleyball.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Keep The Ball Up</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.21.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -19,10 +19,9 @@
         width: 800,
         height: 600,
         physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 300 },
-                debug: false
+            default: 'matter',
+            matter: {
+                gravity: { y: 1 }
             }
         },
         scene: {
@@ -49,10 +48,11 @@
     }
 
     function createPlayer() {
-        player = this.physics.add.sprite(100, 450, 'dude');
+        player = this.matter.add.sprite(100, 450, 'dude');
 
         player.setBounce(0.2);
-        player.setCollideWorldBounds(true);
+        player.setFixedRotation();
+        // player.setCollideWorldBounds(true);
 
         //  Our player animations, turning, walking left and walking right.
         this.anims.create({
@@ -77,26 +77,25 @@
     }
 
     function createBall() {
-        ball = this.physics.add.sprite(400, 400, 'bomb');
+        ball = this.matter.add.sprite(400, 400, 'bomb');
 
         ball.setBounce(0.9);
-        ball.setGravityY(1000);
-        ball.setCollideWorldBounds(true);
-        ball.setVelocityX(Phaser.Math.Between(-300, 300));
+        ball.setVelocityX(Phaser.Math.Between(-10, 10));
+        ball.setFixedRotation();
+        ball.setFrictionAir(0);
     }
 
     function create ()
     {
         this.add.image(400, 300, 'sky');
+        
+        this.matter.world.setBounds(0, 0, 800, 536, 1, true, true, false, true)
 
-        ground = this.physics.add.staticSprite(400, 568, 'ground').setScale(2).refreshBody();
+        ground = this.matter.add.image(400, 568, 'ground').setScale(2);
+        ground.setStatic(true);
 
         createPlayer.call(this);
         createBall.call(this);
-
-        this.physics.add.collider(player, ball);
-        this.physics.add.collider(player, ground);
-        this.physics.add.collider(ball, ground);
 
         cursors = this.input.keyboard.createCursorKeys();
     }
@@ -110,13 +109,13 @@
 
         if (cursors.left.isDown)
         {
-            player.setVelocityX(-160);
+            player.setVelocityX(-3);
 
             player.anims.play('left', true);
         }
         else if (cursors.right.isDown)
         {
-            player.setVelocityX(160);
+            player.setVelocityX(3);
 
             player.anims.play('right', true);
         }
@@ -127,9 +126,9 @@
             player.anims.play('turn');
         }
 
-        if (cursors.up.isDown && player.body.touching.down)
+        if (cursors.up.isDown)
         {
-            player.setVelocityY(-100);
+            player.setVelocityY(-1);
         }
     }
 
