implement sensor platforming logic

--- a/volleyball.html
+++ b/volleyball.html
@@ -48,16 +48,65 @@
     }
 
     function createPlayer() {
-        playerCont = this.add.container(100, 450)
-        playerBody = this.add.sprite(0, 0, 'dude');
-        playerCont.add(playerBody);
+        // playerCont = this.add.container(100, 450)
+        // playerBody = this.add.sprite(0, 0, 'dude');
+        // playerCont.add(playerBody);
 
-        playerCont.setSize(27, 40)
+        // playerCont.setSize(27, 40)
 
-        player = this.matter.add.gameObject(playerCont);
+        // player = this.matter.add.gameObject(playerCont);
 
-        player.setBounce(0.2);
-        player.setFixedRotation();
+        playerController = {
+            matterSprite: this.matter.add.sprite(0, 0, 'dude'),
+            blocked: {
+                left: false,
+                right: false,
+                bottom: false,
+                top: false,
+            },
+            numTouching: {
+                left: 0,
+                right: 0,
+                bottom: 0,
+                top: 0
+            },
+            sensors: {
+                top: null,
+                bottom: null,
+                left: null,
+                right: null
+            },
+            lastJumpedAt: 0
+        }
+
+        // playerController.matterSprite.setBounce(0.2);
+        // playerController.matterSprite.setFixedRotation();
+
+        var M = Phaser.Physics.Matter.Matter;
+        var w = playerController.matterSprite.width;
+        var h = playerController.matterSprite.height;
+
+        var playerBody = M.Bodies.rectangle(0, 0, w * 0.75, h, { chamfer: { radius: 10 } });
+        playerController.sensors.bottom = M.Bodies.rectangle(0, h * 0.5, w * 0.5, 5, { isSensor: true });
+        playerController.sensors.left = M.Bodies.rectangle(-w * 0.45, 0, 5, h * 0.25, { isSensor: true });
+        playerController.sensors.right = M.Bodies.rectangle(w * 0.45, 0, 5, h * 0.25, { isSensor: true });
+        playerController.sensors.top = M.Bodies.rectangle(0, -h * 0.5, w * 0.5, 5, { isSensor: true });
+
+        // playerCont.add(playerController.sensors.top);
+        // playerCont.add(playerController.sensors.bottom);
+        // playerCont.add(playerController.sensors.left);
+        // playerCont.add(playerController.sensors.right);
+
+        var compoundBody = M.Body.create({
+            parts: [
+                playerBody, playerController.sensors.top, playerController.sensors.bottom, playerController.sensors.left,
+                playerController.sensors.right
+            ],
+            friction: 0.01,
+            restitution: 0.05 // Prevent body from sticking against a wall
+        });
+
+        playerController.matterSprite.setExistingBody(compoundBody).setFixedRotation().setPosition(100,450);
 
         //  Our player animations, turning, walking left and walking right.
         this.anims.create({
@@ -78,6 +127,52 @@
             frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
             frameRate: 10,
             repeat: -1
+        });
+
+        this.matter.world.on('beforeupdate', function (event) {
+            playerController.numTouching.left = 0;
+            playerController.numTouching.right = 0;
+            playerController.numTouching.bottom = 0;
+        });
+
+        this.matter.world.on('collisionactive', function (event)
+        {
+            var playerBody = playerController.body;
+            var left = playerController.sensors.left;
+            var right = playerController.sensors.right;
+            var bottom = playerController.sensors.bottom;
+
+            for (var i = 0; i < event.pairs.length; i++)
+            {
+                var bodyA = event.pairs[i].bodyA;
+                var bodyB = event.pairs[i].bodyB;
+
+                if (bodyA === playerBody || bodyB === playerBody)
+                {
+                    continue;
+                }
+                else if (bodyA === bottom || bodyB === bottom)
+                {
+                    // Standing on any surface counts (e.g. jumping off of a non-static crate).
+                    playerController.numTouching.bottom += 1;
+                }
+                else if ((bodyA === left && bodyB.isStatic) || (bodyB === left && bodyA.isStatic))
+                {
+                    // Only static objects count since we don't want to be blocked by an object that we
+                    // can push around.
+                    playerController.numTouching.left += 1;
+                }
+                else if ((bodyA === right && bodyB.isStatic) || (bodyB === right && bodyA.isStatic))
+                {
+                    playerController.numTouching.right += 1;
+                }
+            }
+        });
+
+        this.matter.world.on('afterupdate', function (event) {
+            playerController.blocked.right = playerController.numTouching.right > 0 ? true : false;
+            playerController.blocked.left = playerController.numTouching.left > 0 ? true : false;
+            playerController.blocked.bottom = playerController.numTouching.bottom > 0 ? true : false;
         });
     }
 
@@ -112,10 +207,8 @@
         cursors = this.input.keyboard.createCursorKeys();
     }
 
-    function update ()
-    {
-        // spinner.setVelocity(0,0);
-        
+    function update (time)
+    {        
         spinner.setAngularVelocity(0.1);
         spinner.setPosition(400, 300)
 
@@ -124,34 +217,38 @@
             return;
         }
 
-        if (cursors.left.isDown)
+        if (cursors.left.isDown && !playerController.blocked.left)
         {
-            player.setVelocityX(-3);
+            playerController.matterSprite.setVelocityX(-5);
 
-            playerBody.anims.play('left', true);
+            playerController.matterSprite.anims.play('left', true);
         }
-        else if (cursors.right.isDown)
+        else if (cursors.right.isDown && !playerController.blocked.right)
         {
-            player.setVelocityX(3);
+            playerController.matterSprite.setVelocityX(5);
 
-            playerBody.anims.play('right', true);
+            playerController.matterSprite.anims.play('right', true);
         }
         else
         {
-            player.setVelocityX(0);
+            playerController.matterSprite.setVelocityX(0);
 
-            playerBody.anims.play('turn');
+            playerController.matterSprite.anims.play('turn');
         }
 
-        if (cursors.up.isDown)
+        var canJump = (time - playerController.lastJumpedAt) > 250;
+        if (cursors.up.isDown && playerController.blocked.bottom)
         {
-            player.setVelocityY(-1);
+            playerController.matterSprite.setVelocityY(-10);
+            playerController.lastJumpedAt = time;
         }
     }
 
-    // function catchBall() {
-
-    // }
+    function catchBall() {
+        ball.destroy();
+        heldBall = this.add.sprite(0, -15, 'bomb');
+        playerCont.add(heldBall);
+    }
 
     function dangerZone (ball)
     {
