--- a/volleyball.html
+++ b/volleyball.html
@@ -21,7 +21,7 @@
         physics: {
             default: 'matter',
             matter: {
-                gravity: { y: 1 }
+                gravity: { y: 0.5 }
             }
         },
         scene: {
@@ -42,6 +42,11 @@
     var scoreText;
     var record = 0;
     var recordText;
+    var gimmicks = [];
+
+    var spaceKey;
+
+    var zKey;
 
     var game = new Phaser.Game(config);
 
@@ -51,6 +56,7 @@
         this.load.image('ground', 'assets/platform.png');
         this.load.image('bomb', 'assets/bomb.png');
         this.load.image('tracker', 'assets/star.png');
+        this.load.image('square', 'assets/square.png');
         this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
     }
 
@@ -177,6 +183,7 @@
 
         ballController.ballSprite.setBounce(0.9);
         ballController.ballSprite.setFrictionAir(0.01);
+        ballController.ballSprite.setTint(0xff7777);
 
         resetBall();
 
@@ -208,6 +215,8 @@
         spinner = this.matter.add.sprite(400, 300, 'ground').setScale(0.5);
         spinner.setIgnoreGravity(true);
         spinner.setFixedRotation();
+        // spinner.setSensor(true).setVisible(false);
+        gimmicks.push(spinner);
     }
 
     function create()
@@ -233,40 +242,58 @@
 
         cursors = this.input.keyboard.createCursorKeys();
 
+        spaceKey = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.SPACE);
+        zKey = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.Z);
+
+        zKey.on('down', function(key, event) {
+            spinner.setSensor(!spinner.isSensor());
+            spinner.setVisible(!spinner.visible);
+        });
+
         scoreText = this.add.text(16, 16, 'Airtime: 0', { fontSize: '32px', color: '#000' });
         recordText = this.add.text(16, 48, 'Record: 0', { fontSize: '32px', color: '#000' });
-        this.add.text(16, 80, 'Arrow keys to move and jump.', { fontSize: '16px', color: '#000' });
-        this.add.text(16, 96, 'Press down to reset the ball.', { fontSize: '16px', color: '#000' });
+        this.add.text(16, 80, 'Arrow keys to move and jump', { fontSize: '16px', color: '#000' });
+        this.add.text(16, 96, 'Press space to reset the ball', { fontSize: '16px', color: '#000' });
+        this.add.text(16, 112, 'Press Z to toggle obstacles', { fontSize: '16px', color: '#000' });
         // this.add.text(16, 544, 'DANGER ZONE', { fontSize: '48px', color: '#F33', fontStyle: 'bold' });
     }
 
     function update(time)
     {
-        spinner.setAngularVelocity(0.1);
+        spinner.setAngularVelocity(0.01);
         spinner.setPosition(400, 300)
 
-        tracker.setPosition(ballController.ballSprite.x, 10)
+        tracker.setPosition(ballController.ballSprite.x, 590)
 
         if (gameOver)
         {
             return;
         }
 
-        if (cursors.left.isDown && !playerController.blocked.left)
+        playerController.matterSprite.setFriction(0)
+        if (cursors.left.isDown)
         {
             playerController.matterSprite.setVelocityX(-6);
+            // playerController.matterSprite.applyForce(new Phaser.Math.Vector2(-0.002, 0));
+
+            // console.log(playerController.matterSprite);
+
+            // var speed = playerController.matterSprite.
+            // playerController.matterSprite.setVelocity(Math.max(-6))
 
             playerController.matterSprite.anims.play('left', true);
         }
-        else if (cursors.right.isDown && !playerController.blocked.right)
+        else if (cursors.right.isDown)
         {
             playerController.matterSprite.setVelocityX(6);
+            // playerController.matterSprite.applyForce(new Phaser.Math.Vector2(0.002, 0));
 
             playerController.matterSprite.anims.play('right', true);
         }
-        else
+        else// if (playerController.blocked.bottom)
         {
             playerController.matterSprite.setVelocityX(0);
+            // playerController.matterSprite.setFriction(0.2)
 
             playerController.matterSprite.anims.play('turn');
         }
@@ -274,18 +301,18 @@
         var canJump = (time - playerController.lastJumpedAt) > 250;
         if (cursors.up.isDown && playerController.blocked.bottom && canJump)
         {
-            playerController.matterSprite.setVelocityY(-10);
+            playerController.matterSprite.setVelocityY(-5);
             
         }
 
-        if (cursors.down.isDown) {
+        if (spaceKey.isDown) {
             ballController.lastTouchedGround = time;
             resetBall();
         }
 
         var canLaunch = (time - ballController.lastLaunchedAt) > 250
         if (ballController.launching && canLaunch) {
-            ballController.ballSprite.applyForce(new Phaser.Math.Vector2(0, -0.02));
+            ballController.ballSprite.applyForce(new Phaser.Math.Vector2(0, -0.01));
             ballController.lastLaunchedAt = time;
         }
 
