--- a/volleyball.html
+++ b/volleyball.html
@@ -33,8 +33,16 @@
 
     var ground;
     var dangerZone;
+
     var playerController;
     var ballController;
+
+    var spinner;
+    var spinner2;
+    var spinner3;
+    var pivot;
+    // var image;
+
     var tracker;
     var cursors;
     var gameOver = false;
@@ -53,7 +61,8 @@
     function preload ()
     {
         this.load.image('sky', 'assets/sky.png');
-        this.load.image('ground', 'assets/platform.png');
+        this.load.image('ground', 'assets/ground.png');
+        this.load.image('spinner', 'assets/spinner.png');
         this.load.image('bomb', 'assets/bomb.png');
         this.load.image('tracker', 'assets/star.png');
         this.load.image('square', 'assets/square.png');
@@ -211,12 +220,27 @@
         tracker.setStatic(true);
     }
 
-    function createSpinner() {
-        spinner = this.matter.add.sprite(400, 300, 'ground').setScale(0.5);
+    function createSpinner(x, y, r) {
+        var pivot = this.matter.add.image(x, y, 'square').setStatic(true).setSensor(true).setVisible(false);
+
+        spinner = this.matter.add.sprite(x, y, 'spinner').setScale(0.5);
         spinner.setIgnoreGravity(true);
+        spinner.setFrictionAir(0);
+        spinner.setAngularVelocity(r);
         spinner.setFixedRotation();
-        // spinner.setSensor(true).setVisible(false);
-        gimmicks.push(spinner);
+
+        this.matter.add.joint(pivot, spinner, 0, 0.99);
+        // gimmicks.push(pivot);
+        // gimmicks.push(spinner);
+    }
+
+    function createPendulum() {
+        var M = Phaser.Physics.Matter.Matter;
+
+        pivot = this.matter.add.image(400, 100, 'square').setStatic(true).setSensor(true).setVisible(false);
+        var weight = this.matter.add.sprite(600, 100, 'square').setScale(10).setFrictionAir(0).setMass(0.2);
+
+        this.matter.add.joint(pivot, weight, 200, 0.95);
     }
 
     function create()
@@ -237,7 +261,12 @@
 
         createPlayer.call(this);
         createBall.call(this);
-        createSpinner.call(this);
+
+        createSpinner.call(this, 400, 100, 0.01);
+        createSpinner.call(this, 100, 350, -0.01);
+        createSpinner.call(this, 700, 350, 0.01);
+        createPendulum.call(this);
+
         createTracker.call(this);
 
         cursors = this.input.keyboard.createCursorKeys();
@@ -245,23 +274,27 @@
         spaceKey = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.SPACE);
         zKey = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.Z);
 
-        zKey.on('down', function(key, event) {
-            spinner.setSensor(!spinner.isSensor());
-            spinner.setVisible(!spinner.visible);
-        });
+        // zKey.on('down', function(key, event) {
+        //     spinner.setSensor(!spinner.isSensor());
+        //     spinner.setVisible(!spinner.visible);
+        // });
 
         scoreText = this.add.text(16, 16, 'Airtime: 0', { fontSize: '32px', color: '#000' });
         recordText = this.add.text(16, 48, 'Record: 0', { fontSize: '32px', color: '#000' });
         this.add.text(16, 80, 'Arrow keys to move and jump', { fontSize: '16px', color: '#000' });
         this.add.text(16, 96, 'Press space to reset the ball', { fontSize: '16px', color: '#000' });
-        this.add.text(16, 112, 'Press Z to toggle obstacles', { fontSize: '16px', color: '#000' });
+        // this.add.text(16, 112, 'Press Z to toggle obstacles', { fontSize: '16px', color: '#000' });
         // this.add.text(16, 544, 'DANGER ZONE', { fontSize: '48px', color: '#F33', fontStyle: 'bold' });
+
+        // this.matter.world.createDebugGraphic();
+        // this.matter.world.drawDebug = true;
     }
 
     function update(time)
     {
-        spinner.setAngularVelocity(0.01);
-        spinner.setPosition(400, 300)
+        // spinner.setPosition(400, 100)
+
+        // image.rotation += 0.01;
 
         tracker.setPosition(ballController.ballSprite.x, 590)
 
